manifests/jobmanager-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  name: etsn-jobmanager
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: k3s.bull1.ari-imet.eu
      http:
         paths:
           - backend:
               service:
                 name: jobmanager-service
                 port:
                   number: 8082
             path: /jobmanager
             pathType: Prefix
  tls:
    - hosts:
        - k3s.bull1.ari-imet.eu
      secretName: k3s-bull1-secret
